manifests/dev/sonarr/Namespace-sonarr.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: sonarr
