manifests/dev/sonarr/Deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/version: latest
  name: sonarr
  namespace: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: sonarr
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: SONARR__POSTGRES__HOST
              value: postgresql.postgresql
            - name: SONARR__POSTGRES__PORT
              value: "5432"
            - name: SONARR__POSTGRES__MAINDB
              value: sonarr
            - name: SONARR__POSTGRES__LOGDB
              value: sonarr-log
            - name: SONARR__POSTGRES__USER
              value: sonarr
            - name: SONARR__POSTGRES__PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: sonarr-database-password
          image: linuxserver/sonarr:4.0.19.2979-ls323
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 90
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /tv
              name: tv
      initContainers: []
      nodeSelector:
        kubernetes.io/hostname: edgenix
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-sonarr-config
        - name: sonarr-database-password
          secret:
            secretName: sonarr-database-password
        - name: downloads
          persistentVolumeClaim:
            claimName: sonarr-sonarr-downloads
        - name: tv
          persistentVolumeClaim:
            claimName: sonarr-sonarr-tv
