manifests/dev/sonarr/Service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
  type: ClusterIP
