manifests/dev/sonarr/Ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: sonarr
spec:
  ingressClassName: traefik
  rules:
    - host: sonarr.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - sonarr.home.kronkltd.net
